add operation with book entity and some refactoring

--- a/src/main/resources/templates/administrator/all_users.html
+++ b/src/main/resources/templates/administrator/all_users.html
@@ -34,7 +34,7 @@
             <th th:text="#{c.penalty}">Penalty</th>
             <th th:text="#{c.blocked}">IsBlocked</th>
             <th th:text="#{c.userType}">User type</th>
-            <th style="width:20%; text-align: right" th:text="#{c.action}">Action</th>
+            <th th:text="#{c.action}" style="width:20%; text-align: right;">Action</th>
         </tr>
         </thead>
         <tbody>
