--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,16 +4,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title th:text="#{cu.title}">Create user</title>
+    <title th:text="#{r.title}">Registration</title>
 </head>
 <body>
 <div class="container">
     <br>
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-            <h1 class="text-center" th:text="#{cu.head}">Create new User</h1>
+            <h1 class="text-center" th:text="#{r.head}">Please, enter registration data</h1>
             <div class="card-body">
-                <form th:action="@{/administrator/users}" th:object="${userDTO}" method="post">
+                <form th:action="@{/registration}" th:object="${userDTO}" method="post">
+                    <div th:if="${userExist}" style="color: red" class="text-center" th:text="#{r.error.message}">
+                        Login already in use
+                    </div>
                     <div class="form-group">
                         <label for="login" th:text="#{c.login}">Login</label>
                         <input id="login" type="text" name="login" th:field="*{login}" class="form-control"
@@ -55,17 +58,9 @@
                             <li th:each="err : ${#fields.errors('passwordConfirm')}" th:text="${err}" style="color:red;">Error</li>
                         </ul>
                     </div>
-                    <div class="form-group">
-                        <label for="userType.id" th:text="#{c.userType}">User type</label>
-                        <select id="userType.id" class="form-control" name="userType" th:field="*{userType.id}">
-                            <option th:value="1" th:text="#{c.admin}">Admin</option>
-                            <option th:value="2" th:text="#{c.librarian}">Librarian</option>
-                            <option th:value="3" th:text="#{c.user}">User</option>
-                        </select>
-                    </div>
                     <br>
-                    <button type="submit" class="btn btn-outline-success mb-3" th:text="#{c.button.submit}">
-                        Submit
+                    <button type="submit" class="btn btn-outline-success mb-3" th:text="#{r.button}">
+                        Sign up
                     </button>
                 </form>
             </div>
