add operation with bookOrder entity, add navigation and some refactoring

--- a/src/main/resources/templates/administrator/create_publisher.html
+++ b/src/main/resources/templates/administrator/create_publisher.html
@@ -7,6 +7,8 @@
     <title th:text="#{cp.title}">Create new publisher</title>
 </head>
 <body>
+<div th:insert="navbars/admin_navbar :: navbar">Navbar</div>
+<br>
 <div class="container">
     <br>
     <div class="row">
