--- a/src/main/resources/templates/administrator/admin_page.html
+++ b/src/main/resources/templates/administrator/admin_page.html
@@ -7,6 +7,8 @@
     <title th:text="#{a.title}">Title</title>
 </head>
 <body>
+<div th:insert="navbars/admin_navbar :: navbar">Navbar</div>
+<br>
 <div class="container">
     <div class="row">
         <h1 class="text-center" th:text="#{a.head}">Administrator page</h1>
@@ -14,6 +16,10 @@
     <br>
     <table>
         <tbody>
+        <tr>
+            <th th:text="#{c.login}">Login</th>
+            <td th:text="${userDTO.login}">Login</td>
+        </tr>
         <tr>
             <th th:text="#{c.firstName}">First name</th>
             <td th:text="${userDTO.firstName}">Name</td>
