--- a/src/main/resources/templates/administrator/all_publishers.html
+++ b/src/main/resources/templates/administrator/all_publishers.html
@@ -7,6 +7,8 @@
     <title th:text="#{ap.title}">Title</title>
 </head>
 <body>
+<div th:insert="navbars/admin_navbar :: navbar">Navbar</div>
+<br>
 <div class="container">
     <div class="row">
         <h1 class="text-center" th:text="#{ap.head}">List of users</h1>
