--- a/src/main/resources/templates/administrator/all_users.html
+++ b/src/main/resources/templates/administrator/all_users.html
@@ -7,17 +7,9 @@
     <title th:text="#{au.title}">All users</title>
 </head>
 <body>
+<div th:insert="navbars/admin_navbar :: navbar">Navbar</div>
+<br>
 <div class="container">
-    <a th:href="@{${#httpServletRequest.requestURI}(lang='en')}">
-        <i>EN</i>
-    </a>
-    <a th:href="@{${#httpServletRequest.requestURI}(lang='ru')}">
-        <i>RU</i>
-    </a>
-    <form th:action="@{/logout}" method="post">
-        <button type="submit">logout</button>
-    </form>
-    <br>
     <div class="row">
         <h1 class="text-center" th:text="#{au.head}">List of users</h1>
     </div>
