--- a/src/main/resources/templates/administrator/create_user.html
+++ b/src/main/resources/templates/administrator/create_user.html
@@ -7,6 +7,8 @@
     <title th:text="#{cu.title}">Create user</title>
 </head>
 <body>
+<div th:insert="navbars/admin_navbar :: navbar">Navbar</div>
+<br>
 <div class="container">
     <br>
     <div class="row">
