--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,8 @@
     <title th:text="#{i.title}">Title</title>
 </head>
 <body>
+<div th:insert="navbars/guest_navbar :: navbar">Navbar</div>
+<br>
 <div class="container">
     <div class="row">
         <h1 class="text-center" th:text="#{i.head}">List of available books</h1>
