--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,6 +7,8 @@
     <title th:text="#{r.title}">Registration</title>
 </head>
 <body>
+<div th:insert="navbars/guest_navbar :: navbar">Navbar</div>
+<br>
 <div class="container">
     <br>
     <div class="row">
