--- a/src/main/resources/templates/administrator/all_authors.html
+++ b/src/main/resources/templates/administrator/all_authors.html
@@ -19,35 +19,36 @@
             <a th:href="@{/administrator/authors/new}" class="btn btn-outline-success mb-3"
                th:text="#{c.button.add}">Add</a>
         </div>
-        <table class="table table-striped table-hover">
-            <thead class="table-dark">
-            <tr>
-                <th th:text="#{c.firstName}">First name</th>
-                <th th:text="#{c.lastName}">Last name</th>
-                <th style="text-align: right" th:text="#{c.action}">Action</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="author : ${authors}">
-                <td th:text="${author.firstName}">First name</td>
-                <td th:text="${author.lastName}">Last name</td>
-                <td style="text-align: right">
-                    <form th:action="@{/administrator/authors/edit/{id}(id=${author.id})}" method="get"
-                          class="d-inline">
-                        <button type="submit" class="btn btn-outline-primary d-inline" th:text="#{c.button.edit}">Edit
-                        </button>
-                    </form>
-                    <form th:action="@{/administrator/authors/delete/{id}(id=${author.id})}" method="post"
-                          class="d-inline ">
-                        <button type="submit" class="btn btn-outline-danger d-inline" th:text="#{c.button.delete}">
-                            Delete
-                        </button>
-                    </form>
-                </td>
-            </tr>
-            </tbody>
-        </table>
     </div>
+    <table class="table table-striped table-hover">
+        <thead class="table-dark">
+        <tr>
+            <th th:text="#{c.firstName}">First name</th>
+            <th th:text="#{c.lastName}">Last name</th>
+            <th style="text-align: right" th:text="#{c.action}">Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="author : ${currentPage}">
+            <td th:text="${author.firstName}">First name</td>
+            <td th:text="${author.lastName}">Last name</td>
+            <td style="text-align: right">
+                <form th:action="@{/administrator/authors/edit/{id}(id=${author.id})}" method="get"
+                      class="d-inline">
+                    <button type="submit" class="btn btn-outline-primary d-inline" th:text="#{c.button.edit}">Edit
+                    </button>
+                </form>
+                <form th:action="@{/administrator/authors/delete/{id}(id=${author.id})}" method="post"
+                      class="d-inline ">
+                    <button type="submit" class="btn btn-outline-danger d-inline" th:text="#{c.button.delete}">
+                        Delete
+                    </button>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <div th:insert="navbars/pagination_nav :: pagination">Pagination navbar</div>
 </div>
 </body>
 </html>
