--- a/src/main/resources/templates/librarian/subscription.html
+++ b/src/main/resources/templates/librarian/subscription.html
@@ -27,7 +27,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="bookOrder : ${bookOrders}">
+        <tr th:each="bookOrder : ${currentPage}">
             <td th:text="${bookOrder.book.title}">Title</td>
             <td th:text="${#temporals.format(bookOrder.openDate, 'dd.MM.yyyy')}">Open date</td>
             <td th:text="${#temporals.format(bookOrder.closeDate, 'dd.MM.yyyy')}">Close date</td>
@@ -40,6 +40,7 @@
         </tr>
         </tbody>
     </table>
+    <div th:insert="navbars/pagination_nav :: pagination">Pagination navbar</div>
 </div>
 </body>
 </html>
