--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,8 +15,13 @@
             <h1 class="text-center" th:text="#{l.head}">Please, login</h1>
             <div class="card-body">
                 <form th:action="@{login}" method="post">
-                    <div th:if="${param.error}" th:text="#{l.error.message}" style="color: red" class="text-center">
-                        Error message
+                    <div th:if="${session[SPRING_SECURITY_LAST_EXCEPTION] != null and session[SPRING_SECURITY_LAST_EXCEPTION].message == 'Bad credentials'}"
+                         th:text="#{l.error.message.badCredentials}" style="color: red" class="text-center">
+                        Invalid login or password
+                    </div>
+                    <div th:if="${session[SPRING_SECURITY_LAST_EXCEPTION] != null and session[SPRING_SECURITY_LAST_EXCEPTION].message == 'User is disabled'}"
+                         th:text="#{l.error.message.userIsBlocked}" style="color: red" class="text-center">
+                        User is blocked
                     </div>
                     <div class="form-group">
                         <label for="login" th:text="#{c.login}">Login</label>
@@ -36,7 +41,8 @@
                     </div>
                     <br>
                     <div class="form-group">
-                        <span th:text="#{l.register.text}">Register text</span> <a th:href="@{/registration}" th:text="#{l.register.link}">Link</a>
+                        <span th:text="#{l.register.text}">Register text</span> <a th:href="@{/registration}"
+                                                                                   th:text="#{l.register.link}">Link</a>
                     </div>
                 </form>
             </div>
